[BUGFIX] Align units when in a span tag

--- a/xhprof_html/css/typo3.css
+++ b/xhprof_html/css/typo3.css
@@ -146,6 +146,7 @@ h1.xh-title a {
 
 .unit {
 	color: #aaa;
+	white-space: pre;
 }
 
 .form-button {
